# KhPI_CG_Course

./: .clang-format
lab1/: .gitignore  CMakeLists.txt  Lab1.doc
lab1/inc/: app.h  automaton.h  config.h  render.h  ui.h  utils.h
lab1/src/: app.cpp  automaton.cpp  main.cpp  render.cpp  ui.cpp  utils.cpp
lab2/: CMakeLists.txt  Lab2.doc
lab2/inc/: bmp.h  cli.h  color_spaces.h  color_transfer.h  histogram.h  region.h  utils.h
lab2/src/: bmp.cpp  cli.cpp  color_spaces.cpp  color_transfer.cpp  histogram.cpp  main.cpp  region.cpp  utils.cpp
